# Word-Converter

./: CMakeLists.txt  README.md  build.bat  build.sh
include/: number.h
libs/: CMakeLists.txt
libs/list/include/: list.h  list_generic.h  string_list.h
libs/list/src/: imgui.ini  list.cpp  string_list.cpp
libs/utils/include/: date_time.h  file.h  str.h
libs/utils/src/: date_time.cpp  file.cpp  str.cpp
src/: CMakeLists.txt  main.cpp  number.cpp
